--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29422,9 +29422,9 @@ div.dt-button-info {
   width: 400px;
   margin-top: -100px;
   margin-left: -200px;
-  background-color: #dfe9ff;
-  color: #4680ff;
-  border: 2px solid #4680ff;
+  background-color: #fa5760;
+  color: #fff;
+  border: 2px solid #fa5760;
   box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.3);
   border-radius: 3px;
   text-align: center;
@@ -29435,8 +29435,8 @@ div.dt-button-info h2, div.dt-button-info .h2 {
   margin: 0;
   font-weight: normal;
   color: #fff;
-  border-bottom: 1px solid #4680ff;
-  background-color: #4680ff;
+  border-bottom: 1px solid #fa5760;
+  background-color: #fa5760;
 }
 div.dt-button-info > div {
   padding: 1em;
